--- a/style.css
+++ b/style.css
@@ -182,10 +182,11 @@ fieldset:nth-child(2){
 
 main form input[type="submit"] {
     cursor: pointer;
-    width: 50%;
+    width: 35%;
+    height: 10%;
     margin-top: 0.5rem;
     border: none;
-    border-radius: 32px;
+    border-radius: 16px;
     background: #f07404;
     color: white;
     font-size: 1rem;
